--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,7 @@
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
   >
 
-  {% capture seo_tags %}
-    {% seo title=false %}
-  {% endcapture %}
+
 
   {% if page.image %}
     {% assign img = page.image.path | default: page.image %}
@@ -45,7 +43,7 @@
     {{ site.title }}
   </title>
 
-  {% include_cached favicons.html %}
+  {% include favicons.html %}
 
   {% if site.resources.ignore_env != jekyll.environment and site.resources.self_hosted %}
     <link href="{{ site.data.origin[type].webfonts | relative_url }}" rel="stylesheet">
