--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,10 @@ refactor: true
 
 {% include lang.html %}
 
+Follow your heart to Sunland Ranch.
+
+Come, meet my Icelandic Horses, and fly with us!
+
 {% assign pinned = site.posts | where: 'pin', 'true' %}
 {% assign default = site.posts | where_exp: 'item', 'item.pin != true and item.hidden != true' %}
 
